--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: OneSync
 version: '${project.version}'
-main: io.github.hello09x.onesync.Main
+main: io.github.hello09x.onesync.bukkit.Main
 api-version: '1.20'
 depend:
   - CommandAPI
+  - ProtocolLib
