--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,6 +10,11 @@ datasource:
 # 是否打印调试日志
 debug: true
 
+# 服务器 ID
+# 如果配置了这项, 那么在服务器重启的时候能自动解锁因为异常关闭而锁住的玩家
+# 注意: 要么别配置, 如果配置就一定不能重复!!!
+server-id: ''
+
 synchronize:
 
   # 玩家背包
