--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,7 +12,8 @@ debug: true
 
 # 服务器 ID
 # 如果配置了这项, 那么在服务器重启的时候能自动解锁因为异常关闭而锁住的玩家
-# 注意: 要么别配置, 如果配置就一定不能重复!!!
+# 注意 1: 要么别配置, 如果配置就一定不能重复!!!
+# 注意 2: 因为服务器异常关闭的锁定, 可能导致玩家的数据不是最新的!!!
 server-id: ''
 
 synchronize:
