--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,9 @@ name: OneSync
 version: '${project.version}'
 main: io.github.hello09x.onesync.Main
 api-version: '1.20'
+folia-supported: true
+
+
 depend:
   - CommandAPI
   - ProtocolLib
