--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -87,3 +87,11 @@ teleport:
   # 请保持多个服务器的这个配置统一, 否则会发生奇怪的事情
   enabled: false
 
+  # 玩家开始传送前需要等待多少秒
+  # 等待期间如果移动了则取消传送
+  # 单位: 秒
+  wait: 3
+
+  # 玩家发起传送请求的有效时间
+  # 单位: 秒
+  expires-in: 60
