--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -84,8 +84,8 @@ snapshot:
 teleport:
 
   # 是否启用
-  # 启用此功能要重启服务器
   # 请保持多个服务器的这个配置统一, 否则会发生奇怪的事情
+  # 修改此项配置重启才生效
   enabled: false
 
   # 玩家开始传送前需要等待多少秒
@@ -96,3 +96,17 @@ teleport:
   # 玩家发起传送请求的有效时间
   # 单位: 秒
   expires-in: 60
+
+  # 命令别名
+  # 默认配置下覆盖常规的 tp 命令, 如果你不想覆盖可以修改为 '' 或者与原命令保持一致
+  # 修改此项配置重启才生效
+  commands:
+    stpa: tpa
+    stpahere: tpahere
+    stpaccept: tpaccept
+    stpdeny: tpdeny
+    stpcancel: tpcancel
+    stp: tp
+    stphere: tphere
+    stphereall: tphereall
+    stpahereall: tpahereall
