--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,7 +18,7 @@ libraries:
 
 permissions:
   onesync.teleport.tpa:
-    default: true
+    default: false
 
   onesync.teleport.tpahere:
     default: false
