定时保存部分用户快照

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -73,6 +73,7 @@ snapshot:
   # 除了这里可以指定的节点以外, 玩家退出游戏, 服务器关闭也会保存快照
   # 可选值:
     # WORLD_SAVE              : (全体) 保存地图时触发, 约 5 分钟一次, 经测试 50 名玩家约 400 ms
+    # PERIODICAL              : (部分) 约每 5 分钟保存大约 1/4 的玩家
     # PLAYER_DEATH            : (个人) 玩家死亡时触发, 适合死亡掉落的服务器
     # PLAYER_GAME_MODE_CHANGE : (个人) 玩家游戏模式切换
   when:
