支持差异化配置

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,6 +17,10 @@ debug: true
 server-id: ''
 
 # 同步配置
+# 当前服务器同步则设置为: true
+# 所有服务器都不同步则设置为: false
+# 当前服务器不同步, 别的服务器同步则设置为: isolated
+# 提示: 设置为 isolated 的服务器会将别的服务器保存的快照信息继续传递下去, 才能避免数据混乱
 synchronize:
 
   # 玩家背包
