--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>copy</id>
@@ -54,6 +55,11 @@
                                     </fileset>
                                 </copy>
                                 <copy todir="./server2/plugins">
+                                    <fileset dir="${project.build.directory}">
+                                        <include name="${project.artifactId}-${project.version}.jar"/>
+                                    </fileset>
+                                </copy>
+                                <copy todir="./server3/plugins">
                                     <fileset dir="${project.build.directory}">
                                         <include name="${project.artifactId}-${project.version}.jar"/>
                                     </fileset>
