--- a/pom.xml
+++ b/pom.xml
@@ -117,8 +117,26 @@
 
         <dependency>
             <groupId>io.github.hello09x</groupId>
-            <artifactId>bedrock</artifactId>
-            <version>0.0.1</version>
+            <artifactId>devtools-command</artifactId>
+            <version>0.1.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.hello09x</groupId>
+            <artifactId>devtools-database</artifactId>
+            <version>0.1.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.hello09x</groupId>
+            <artifactId>devtools-core</artifactId>
+            <version>0.1.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.hello09x</groupId>
+            <artifactId>devtools-menu</artifactId>
+            <version>0.1.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
